fixed word wrapping on mobile devices

--- a/autoform-tags.css
+++ b/autoform-tags.css
@@ -19,15 +19,36 @@
 }
 
 
-.aftags-td-tags {
+.aftags-tags {
 
-}
-
-
-.aftags-td-input {
-	padding : 0px !important;
 }
 
 .aftags-range {
 	padding: 4px;
+}
+
+.aftags-wrap {
+    display         : flex;
+    flex-direction  : column;
+    white-space: inherit !important;
+
+    /* These are technically the same, but use both */
+    overflow-wrap   : break-word;
+    word-wrap       : break-word;
+
+    -ms-word-break  : break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    /* word-break      : break-all; */
+    /* Instead use this non-standard one: */
+    word-break      : break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens     : auto;
+    -moz-hyphens    : auto;
+    -webkit-hyphens : auto;
+    hyphens         : auto;
+}
+
+.aftags-passive {
+    pointer-events: none;
 }
